--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,54 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
   .hero-bg-mob {
-    /* background-image: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
-      url(/images/hero-bg-320.jpg);
-    background-image:
-      linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
-      -webkit-image-set(url(/images/hero-bg-320.jpg) 1x, url(/images/hero-bg-320@2x.jpg)
-            2x); */
-    background-image: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
+    background-image: linear-gradient(
+        180deg,
+        rgb(0, 24, 38),
+        rgba(0, 37, 49, 0) 100%
+      ),
       image-set(
         url(/images/hero-bg-320.jpg) 1x,
         url(/images/hero-bg-320@2x.jpg) 2x
       );
   }
   .hero-bg-tab {
-    /* background-image: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
-      url(/images/hero-bg-768.jpg);
-    background-image:
-      linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
-      -webkit-image-set(url(/images/hero-bg-768.webp) type('image/webp') 1x, url(/images/hero-bg-768@2x.webp)
-            type('image/webp') 2x, url(/images/hero-bg-768.jpg) 1x, url(/images/hero-bg-768@2x.jpg)
-            2x); */
     background-image: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
       image-set(
-        /* url(/images/hero-bg-768.webp) type('image/webp') 1x,
-        url(/images/hero-bg-768@2x.webp) type('image/webp') 2x, */
-          url(/images/hero-bg-768.jpg) 1x,
+        url(/images/hero-bg-768.jpg) 1x,
         url(/images/hero-bg-768@2x.jpg) 2x
       );
   }
   .hero-bg-desk {
-    /* background-image: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
-      url(/images/hero-bg-1280.jpg);
-    background-image:
-      linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
-      -webkit-image-set(url(/images/hero-bg-1280.webp) type('image/webp') 1x, url(/images/hero-bg-1280@2x.webp)
-            type('image/webp') 2x, url(/images/hero-bg-1280.jpg) 1x, url(/images/hero-bg-1280@2x.jpg)
-            2x); */
     background-image: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5)),
       image-set(
-        /* url(/images/hero-bg-1280.webp) type('image/webp') 1x,
-        url(/images/hero-bg-1280@2x.webp) type('image/webp') 2x, */
-          url(/images/hero-bg-1280.jpg) 1x,
+        url(/images/hero-bg-1280.jpg) 1x,
         url(/images/hero-bg-1280@2x.jpg) 2x
       );
   }
   .hero {
     @apply hero-bg-mob md:hero-bg-tab xl:hero-bg-desk relative bg-[#D9D9D9] bg-cover bg-center;
+  }
+
+  .modal {
+    backdrop-filter: blur(50px);
+    background-image: linear-gradient(
+      rgba(1, 10, 5, 0.75),
+      rgba(1, 10, 5, 0.75)
+    );
+  }
+  .backdrop {
+    background-image: linear-gradient(rgba(1, 10, 5, 0.5), rgba(1, 10, 5, 0.5));
   }
 }
